{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 213,
  "lineage": "9e537e84-f2d6-1b02-1a5c-68b4a1020bd5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yolo_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cef932bcf979d254",
            "arn": "arn:aws:ec2:us-east-1:754810878197:instance/i-04961b95b70b29077",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04961b95b70b29077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "yolo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010a0f63bc65780fa",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.17",
            "public_ip": "52.204.229.31",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026c4081bd252a6ef",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01db167ddde6f88b2",
            "tags": {
              "Name": "YoloServer"
            },
            "tags_all": {
              "Name": "YoloServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ba144fdecb974cc"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.yolo_key_pair",
            "aws_security_group.yolo_sg",
            "aws_subnet.yolo_subnet",
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "yolo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754810878197:internet-gateway/igw-072b95fe061f25833",
            "id": "igw-072b95fe061f25833",
            "owner_id": "754810878197",
            "region": "us-east-1",
            "tags": {
              "Name": "yolo-igw"
            },
            "tags_all": {
              "Name": "yolo-igw"
            },
            "vpc_id": "vpc-022cc9cd791e4a9f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yolo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754810878197:route-table/rtb-06b03042d9a745b39",
            "id": "rtb-06b03042d9a745b39",
            "owner_id": "754810878197",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072b95fe061f25833",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yolo-route-table"
            },
            "tags_all": {
              "Name": "yolo-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-022cc9cd791e4a9f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.yolo_igw",
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yolo_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73259ca81f88b10",
            "region": "us-east-1",
            "route_table_id": "rtb-06b03042d9a745b39",
            "subnet_id": "subnet-01db167ddde6f88b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.yolo_igw",
            "aws_route_table.yolo_route_table",
            "aws_subnet.yolo_subnet",
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yolo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754810878197:security-group/sg-05ba144fdecb974cc",
            "description": "Allow SSH, HTTP, and custom ports for YOLO app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ba144fdecb974cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend app port from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Frontend app port from anywhere",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MongoDB port from anywhere",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "yolo-sg",
            "name_prefix": "",
            "owner_id": "754810878197",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yolo-sg"
            },
            "tags_all": {
              "Name": "yolo-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-022cc9cd791e4a9f9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yolo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754810878197:subnet/subnet-01db167ddde6f88b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01db167ddde6f88b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "754810878197",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "yolo-subnet"
            },
            "tags_all": {
              "Name": "yolo-subnet"
            },
            "vpc_id": "vpc-022cc9cd791e4a9f9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.yolo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "yolo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:754810878197:vpc/vpc-022cc9cd791e4a9f9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0edd9c017c4201a18",
            "default_route_table_id": "rtb-03030edd71857275b",
            "default_security_group_id": "sg-0cad58b5d83f8d48a",
            "dhcp_options_id": "dopt-037015bfb2e4f1bb5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022cc9cd791e4a9f9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03030edd71857275b",
            "owner_id": "754810878197",
            "region": "us-east-1",
            "tags": {
              "Name": "yolo-vpc"
            },
            "tags_all": {
              "Name": "yolo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}